# graphemex

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt
examples/: benchmark.py  benchmark_batch_vs_grapheme.py  benchmark_batch_vs_single.py  test_cases.py
src/: lib.rs
